--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.356.0",
     "next": "14.2.0",
     "next-auth": "^4.24.7",
